test/errors/python_generator_error/zs/package_with_module_clashing/package_with_bitmask_clash_error/clashing_name.zs
package package_with_module_clashing.package_with_bitmask_clash_error.clashing_name;

struct Empty
{};
